--- a/express/learn_about_me/views/edit.ejs
+++ b/express/learn_about_me/views/edit.ejs
@@ -1,6 +1,7 @@
 <% include _header %>
 <h1>Edit your profile</h1>
 <form action="/edit" method="post">
+  <input name="_csrf" value="<%= csrfToken %>" type="hidden">
   <input name="displayname" type="text" class="form-control"
          placeholder="Display name"
          value="<%= currentUser.displayName || "" %>">
